@@ -1,3 +1,7 @@
+2001-03-12  Keisuke Nishida  <kxn30@po.cwru.edu>
+
+	* common-list.scm (count-if): New procedure.
+
 2001-03-10  Neil Jerram  <neil@ossau.uklinux.net>
 
 	* buffered-input.scm (make-buffered-input-port): New, more general
